@@ -1,3 +1,8 @@
+2008-04-08  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/gnome-vfs-spec.scm (unwrap-value-cg): Use new GValue
+	functions.
+
 2007-12-10  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.96 ==
